# ChangeLog for sys-apps/pkgcore
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/pkgcore/ChangeLog,v 1.170 2013/09/12 22:37:09 mgorny Exp $

  12 Sep 2013; Michał Górny <mgorny@gentoo.org> pkgcore-0.8.6.ebuild,
  pkgcore-9999.ebuild:
  Replace virtual/pyparsing dep with dev-python/pyparsing. The split versions
  were removed and all in-tree versions support all impls now.

  17 Jun 2013; Tim Harder <radhermit@gentoo.org> metadata.xml:
  Add myself as a maintainer.

  16 Jun 2013; Brian Dolbec <dolsen@gentoo.org> metadata.xml:
  Adding myself as maintainer

  16 Jun 2013; Pacho Ramos <pacho@gentoo.org> -pkgcore-0.8.4.ebuild,
  -pkgcore-0.8.5-r1.ebuild, -pkgcore-0.8.ebuild, metadata.xml:
  Cleanup due #122207

  15 May 2013; Patrick Lauer <patrick@gentoo.org> metadata.xml:
  Remove unused description from metadata.xml

  01 Jan 2013; Michał Górny <mgorny@gentoo.org> pkgcore-0.8.4.ebuild,
  pkgcore-0.8.5-r1.ebuild, pkgcore-0.8.6.ebuild, pkgcore-0.8.ebuild,
  pkgcore-9999.ebuild:
  Use virtual/pyparsing.

*pkgcore-0.8.6 (29 Oct 2012)

  29 Oct 2012; Brian Harring <ferringb@gentoo.org> +pkgcore-0.8.6.ebuild:
  Better config error messages, and gentoo bug 439800.

  22 Oct 2012; Brian Harring <ferringb@gentoo.org>
  -files/pkgcore-0.7.7.8-ebuild-envs-assert.patch,
  -files/pkgcore-0.7.7.8-fix-resolver-assert.patch:
  Drop dead patches.

*pkgcore-0.8.5-r1 (19 Oct 2012)

  19 Oct 2012; Brian Harring <ferringb@gentoo.org> -pkgcore-0.8.5.ebuild,
  +pkgcore-0.8.5-r1.ebuild, pkgcore-9999.ebuild:
  Drop python-abis awareness, doesn't play nice w/ wrappers; bug #438920.
  Just going to bypass python eclass going forward at this rate.

*pkgcore-0.8.5 (18 Oct 2012)

  18 Oct 2012; Brian Harring <ferringb@gentoo.org> +pkgcore-0.8.5.ebuild,
  pkgcore-9999.ebuild:
  Fix py3k doc building support, update package name rules to recently
  changed PMS rules; bug #438370. Finally, fix a racey false positive 437216.