@@ -3,25 +3,17 @@ Hash: SHA256
 
 DIST pkgcore-0.8.6.tar.bz2 446652 SHA256 05104f683bcad4fb477152c950d8ba21d8a59fe783f05e901f684c66f2c9488c SHA512 320562755c21cb1d749ea011d22313f8c09855375ea72c94910f45202d8a92bb75a0fa709a360c702c16e404dbec9d14d5ed3aff6687084418dc742a4c901955 WHIRLPOOL 611ad52a8015379de50593580c35eb1f175fd0fe3c219548911e7008c58a52185128840950d17c3fd730659196db79550762f029c8c0c199eaba8aa07a8bf9d9
 EBUILD pkgcore-0.8.6.ebuild 1038 SHA256 ad31ecc8706a5659aaee8fd8bdec045a141b94d49650bc44dd158148468094ae SHA512 8fb3b91c655ea688f68fdaff2964e45a6f4e1c6872a062023786b88fe4d413a7b0189fb6d57b65fa34b31ead6272780bc992925c4fc8ba6e401ad9df1be6690b WHIRLPOOL 09119805a58075503fb6120c1b21dfda9c637ba68d0b67080723f9d657bfadfb82362c64eedcdb6a46dad750bf90060bff7fd5a80ff6cb569cbadfa122455009
-EBUILD pkgcore-9999.ebuild 1149 SHA256 f5c9878baa1b1080d617bc041fd97f4ce1392f2d7088d21c518756310a2b38e3 SHA512 2c6b1a9fce9bbb2bd42e04f9fe4f25378add8fa996414c98d13598587c56c6a788cd6c50efe01eef18f8d46aa6f0ed1ca9bf6e4926847d9b2a4178dae7a2fe43 WHIRLPOOL a1c089a8b79d927c103cd894affb5b83aa5ec10c73cc78c4f69d9b6e24d06f18fabe63c2ba2e08edf5ab9bc1a102e67ae6fbf6b1e656c1aaa08a02e1de314230
-MISC ChangeLog 29284 SHA256 f8d973e57ae2ed4cebce86a7931735a4d1c3e9e204763952c3c93f4d899c4b2c SHA512 28302a3b053323efb325215fd5912a3bc2bf5cb42d318531b555a9f99327a78cef8020b8f3f390b7b10188df1c10bd53217adda119e2778c06ab7b06aac2ec9c WHIRLPOOL 25a0048d1d65594df50aa0360d65cefbdfdda546783b68a3b97911325d451d4efd85bdf6a9353937bce6591102b508a265c466f8ddc630036b4dc684fd69975a
-MISC metadata.xml 393 SHA256 69e5553d453dc5a012f338fc7dc63104276c39f9ddfc53c2eee332fecbc1b8a8 SHA512 cce86dcd80973a363dd3613ba35ce1e68445c07313516a481e34a76896d5c261160236a8818fea5b995dda39e7d7358af833b43c38b3a2ef91e044257ea7e00d WHIRLPOOL 33b0d6aaa0497bf9d66f4284142a62621bdfbaa17de90fffbcb29197427625b617c2fdc7cf5977fcb622ae08da13eb72cf953d0f8a36d10b2d9d61814ee02263
+EBUILD pkgcore-9999.ebuild 1633 SHA256 ea7133ffbdc3b579f31e6ae4612ff9c1c31ec509a58c2bcaa4f59ae79bfd4d97 SHA512 fc2ce2134fc37a00cdb327e04969f77be24a9ae492681c8b9c0c4b24e3282c884c6e76b2aec4df0ab6357cc6f0cddb2486056817a3a7874601485a00dde76f37 WHIRLPOOL c1956929c6c58fbcd7d9ea1c552692151f7d4a03b810de3374765e7c1b810b70cbdaa0425d29b4d79758ed04991f5aa49a9f413033112028f1d961a40553c76f
+MISC ChangeLog 29514 SHA256 c25dba6f37c5a801bc3c5e7c6d06a001882c19b27920a5a71fd8dbb92a615680 SHA512 94700334f398ab292bc9571f68113049ee8350bfa95e7a4869faf5c4fa18778af5d65c58911fe519cfdf5dbd83c845a8393f5d7d4f5a33519978163ab9e406d0 WHIRLPOOL 92e0f513975fec92e1e3d8962ae44d4649a5d3853c4f7dbcce35d0bf5ae0b4323568668f5180366d7472469ea9b5ecd1a8e06f038f6dc8f2a954921beaf19659
+MISC metadata.xml 393 SHA256 4d8cfb5e4c240cc53d7ac10c8c2bf4a3c5ba5f9afe81ebe4167c6f195e33d217 SHA512 3ec961e0052adbdb21b9408cd21473cf72f1afa254326f3dbf2a5869a92e5d85eaa6a46441b3f56410a6720f3cbcf50d7aac1a713a81920ffd92a4e8c26f14a1 WHIRLPOOL bd2a57b5753b7d12af6a7a41eae0e536cfa5e0f38a9cc5c789b730d30f2c37ebd706b77bfc57825f28a64cf3ec8bc0992791e487a5e8cccbf8378767209fb05b
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.21 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQJ8BAEBCABmBQJSMkI4XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOALkQAMzd6o1ZsCuC93gfmNSTSILo
-G2lS346oTKGPSfLBTka+5fTZ7MCfmSTvW741Tp4x1mugxeOnBxgCjdDE+ut+vAgI
-5QEDoOM1foihGj4M/au1TtJo5w40r5qvBywZ17bVpTs5yg72xXuaaTbLqjIwbLma
-l3nKOpChhZ8PBKJXFcOqQ4Dnc7BQ/OKPjkencY+EKwH8jdvb91FYUiTieKHTb13Z
-jtFeYGLjp6WFQMH6wQeFrGvXap5R87Fs/ZabeQtg/+YXdNfExsqbpiMHg0OIwRqj
-RnP80JwlM7o2M4fyvKV0l/ujVF+PHwonJfXrT4mZo1E0BDESrYwoj5B+9kZLC9tJ
-wBY6arcii+Gz5pJ1CYWbLPkVlSGNFjJEeMLBSVFs9lcFBZlIwoBDN1BzkVdva66D
-TUz09DMa9gSACuEZzJVXM9/te2rJeK2u35yMJFI2VOuKbEBcRp3q7KtZ82eAfE1p
-f+jHGguoX2+/01PE8CciSr7eOQCB5gZeWWLHL7P184DCZLGlyUsctMsnq/4y/U/u
-1hH1bESrkF0faW7k6ZVk/AAY3taYi+8r8Ise3UM2wOexVJWh+lR559kBxtCs+cno
-qETnKApz/Yyyx51k1RK0A7mEGl478TL6DNHmOELnLXuda9QQd+Whhb/djo+wa5eB
-AQtvrMc7x2vnYOrdwC9g
-=YU2N
+iQEcBAEBCAAGBQJSZtaXAAoJEEqz6FtPBkyjt1kH/3xULK0fu0ug4YQTqUjq/pXq
+FYY8Nng5gU41ZmzaNq4J96wpwwKJtaYo4R7RT7jRV7n7eKATlh4wpDulSges2VaR
+ZdzcMRMtMKFJBVuLgk8v80Db1EYsLxEtJsForNrp5o8BR2nuJKVbZfearxhbHKw9
+o1NJlv1xyKCQ79rQoCKzjBx1rsMGDP5hseK0ipFz2xZy97AiEw2saEMd97xdq5MV
+b9GZqotAGITJOAyTKqRhIgJ/3Yj2i9OfPFF0ArP2gkQ319XLEzxRQBwYJ1l41vPi
+o/RRXnTH6bXczKF4c3Ub+XrM/b+ubkMJo8rJyfgY6BhL1OdEpALiYSEasdZkeDE=
+=FajP
 -----END PGP SIGNATURE-----
