@@ -1,53 +1,78 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/pkgcore/pkgcore-9999.ebuild,v 1.12 2013/09/12 22:37:09 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/pkgcore/pkgcore-9999.ebuild,v 1.13 2013/10/22 19:46:57 radhermit Exp $
 
-EAPI="3"
-DISTUTILS_SRC_TEST="setup.py"
+EAPI=4
+PYTHON_COMPAT=( python{2_6,2_7,3_2,3_3} )
+inherit distutils-r1
 
-EGIT_REPO_URI="https://code.google.com/p/pkgcore/"
-inherit distutils git-2
+if [[ ${PV} == *9999 ]] ; then
+	EGIT_REPO_URI="https://code.google.com/p/pkgcore/"
+	EGIT_NONSHALLOW=1
+	inherit git-r3
+else
+	KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86"
+	SRC_URI="http://pkgcore.googlecode.com/files/${P}.tar.bz2"
+fi
 
 DESCRIPTION="pkgcore package manager"
 HOMEPAGE="http://pkgcore.googlecode.com/"
-SRC_URI=""
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS=""
 IUSE="+doc"
 
-RDEPEND=">=dev-lang/python-2.5
-	=dev-python/snakeoil-9999
-	|| ( >=dev-lang/python-2.5 dev-python/pycrypto )"
+RDEPEND="=dev-python/snakeoil-9999[${PYTHON_USEDEP}]"
 DEPEND="${RDEPEND}
-	dev-python/sphinx
-	dev-python/pyparsing"
-
-DOCS="AUTHORS NEWS"
+	dev-python/sphinx[${PYTHON_USEDEP}]
+	dev-python/pyparsing[${PYTHON_USEDEP}]"
 
 pkg_setup() {
 	# disable snakeoil 2to3 caching...
 	unset PY2TO3_CACHEDIR
-	python_pkg_setup
+
+	mydistutilsargs=(
+		build
+		--disable-html-docs
+		--disable-man-pages
+	)
 }
 
-src_compile() {
-	local x
-	distutils_src_compile $(use_enable doc html-docs)
-	# Find the first set of generated manpages, and symlink
-	# those into the source root.
-	for x in ${PYTHON_ABIS}; do
-		ln -s "${S}/build-${x}/sphinx/man" "${S}/man"
-		break
-	done
+python_compile_all() {
+	esetup.py build_man $(use doc && echo 'build_docs')
+
+	# symlinks generated manpages into source root
+	# dead symlinks are tolerated
+	ln -s "${BUILD_DIR}/sphinx/man" man || die
+	ln -s "${BUILD_DIR}/sphinx/html" html || die
+}
+
+python_test() {
+	esetup.py test
 }
 
 src_install() {
-	distutils_src_install $(use_enable doc html-docs)
+	mydistutilsargs+=(
+		install
+		--disable-html-docs
+		--disable-man-pages
+	)
+
+	distutils-r1_src_install
+}
+
+python_install_all() {
+	local cmds=(
+		install_man
+	)
+	use doc && cmds+=(
+		install_docs --path="${ED%/}"/usr/share/doc/${PF}/html
+	)
+
+	distutils-r1_python_install "${cmds[@]}"
+	distutils-r1_python_install_all
 }
 
 pkg_postinst() {
-	distutils_pkg_postinst
 	pplugincache
 }
