@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/pkgcore
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/pkgcore/ChangeLog,v 1.170 2013/09/12 22:37:09 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/pkgcore/ChangeLog,v 1.172 2013/10/22 19:48:38 radhermit Exp $
+
+  22 Oct 2013; Tim Harder <radhermit@gentoo.org> metadata.xml:
+  Make myself primary maintainer.
+
+  22 Oct 2013; Tim Harder <radhermit@gentoo.org> pkgcore-9999.ebuild:
+  Migrate to distutils-r1 (bug #483062, patch by mgorny).
 
   12 Sep 2013; Michał Górny <mgorny@gentoo.org> pkgcore-0.8.6.ebuild,
   pkgcore-9999.ebuild:
